development/deployment/coba.yaml
apiVersion: v1
kind: Service
metadata:
  name: localhpatest
  labels:
    component: localhpatest
spec:
  ports:
    - port: 8080
      nodePort: 30080
  selector:
    component: localhpatest
  type: "NodePort"
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: localhpatest
  labels:
    component: localhpatest
spec:
  replicas: 2
  selector:
    matchLabels:
      component: "localhpatest"
  template:
    metadata:
      labels:
        component: "localhpatest"
    spec:
      containers:
        - name: localhpatest
          image: "localhpatest:latest"
          imagePullPolicy: "Never"
          ports:
          - name: http
            containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits: 
              cpu: "100m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            timeoutSeconds: 5
            initialDelaySeconds: 20
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            timeoutSeconds: 5
            initialDelaySeconds: 20
