development/deployment/hpa-7-juni.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sound-enkrip-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sound-enkrip
  template:
    metadata:
      labels:
        app: sound-enkrip
    spec:
      containers:
        - name: sound-enkrip
          image: ulum75/sound-enkrip:v1
          ports:
            - containerPort: 5002
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: sound-enkrip-service
spec:
  selector:
    app: sound-enkrip
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
