development/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 82      # Port yang diubah menjadi 82
      targetPort: 80
  type: ClusterIP
